Fix vertical align issue

--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -462,6 +462,7 @@ a {
 	display: inline-block;
 	clear: none;
 	margin: 0rem 0rem 1rem 0rem;
+	vertical-align: top;
 }
 
 .content-preview {
